# libamqp-cpp

./: .gitignore  CMakeLists.txt  readme.md
doc/: connection_close.txt
examples/: CMakeLists.txt  connect_example.cpp
src/: CMakeLists.txt  amqp_sasl.cpp  amqp_sasl.h  channel.cpp  channel.h  codegen.py  connection.cpp  connection.h  exception.h  export.h  frame.cpp  frame.h  frame_builder.cpp  frame_builder.h  frame_handler.h  frame_writer.cpp  frame_writer.h  methods.cpp  methods.h  protocol_v091.cpp  protocol_v091.h  scoped_buffer.h  string_utils.h  table.cpp  table.h  table_entry.cpp  table_entry.h  wireformat.cpp  wireformat.h
src/detail/: bitset.h  byteswap.h  channel0.cpp  channel0.h  channel_impl.cpp  channel_impl.h  connection_impl.cpp  connection_impl.h  connection_manager.cpp  connection_manager.h  frame.cpp  frame.h  frame_builder.cpp  frame_builder.h  frame_handler.h  frame_reader_adapter.h  frame_writer.cpp  methods.cpp  methods.h  properties.cpp  properties.h  statement.cpp  statement.h  string_utils.h  wireformat.cpp  wireformat.h
src/impl/: channel_impl.cpp  channel_impl.h  connection_impl.cpp  connection_impl.h  connection_thread.cpp  connection_thread.h
testing/: CMakeLists.txt  byteswap_test.cpp  frame_test.cpp  method_test.cpp  table_test.cpp  wireformat_test.cpp
